# diff-kdbx

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: testing.md
docs/superpowers/plans/: 2026-04-27-diff-kdbx.md
docs/superpowers/specs/: 2026-04-27-diff-kdbx-design.md
examples/: git-config.md
src/: change_set.rs  compute.rs  dump.rs  lib.rs  mask.rs  options.rs  path.rs
src/render/: json.rs  mod.rs  text.rs
tests/: determinism.rs  git_driver.rs  integration.rs  remote_roundtrip.rs
tests/fixtures/: MANIFEST.md
tests/fixtures/add_entry/: after.kdbx  before.kdbx
tests/fixtures/empty/: after.kdbx  before.kdbx
tests/fixtures/password_change/: after.kdbx  before.kdbx
