[package]
name = "diff-kdbx"
description = "Semantic diff for KeePass KDBX files"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Alexander Towell <lex@metafunctor.com>"]
license = "MIT"
repository = "https://github.com/queelius/diff-kdbx"
documentation = "https://docs.rs/diff-kdbx"
readme = "README.md"
keywords = ["keepass", "kdbx", "diff", "git"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
keepass = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# CLI-only dependencies
clap = { version = "4", features = ["derive"], optional = true }
anyhow = { version = "1", optional = true }
rpassword = { version = "7", optional = true }

[features]
default = []
cli = ["dep:clap", "dep:anyhow", "dep:rpassword"]

[dev-dependencies]
insta = "1"
proptest = "1"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "diff-kdbx"
path = "src/bin/diff_kdbx.rs"
required-features = ["cli"]

[[bin]]
name = "gen-fixtures"
path = "src/bin/gen_fixtures.rs"
required-features = ["cli"]
